# team6_object_follower

./: CMakeLists.txt  README.md  package.xml  setup.py
scripts/: find_object.py  param_assistant.py  rotate_robot.py
src/object_tracking/: __init__.py  contour_tracker.py
team6_chase_object/: CMakeLists.txt  package.xml  setup.py
team6_chase_object/launch/: chase_object.launch  turtlebot3_chase_object.launch
team6_chase_object/scripts/: chase_object.py  detectObject.py  detect_object.py  get_object_range.py  get_object_range_chris.py  rotate_robot.py
team6_chase_object/src/pid/: __init__.py  pid.py
team6_image_classifier/: CMakeLists.txt  package.xml  setup.py  sgdclassifier.pkl
team6_image_classifier/data/classifier/: newsvmclassifier.pkl  sgdclassifier.pkl  svmclassifier.pkl
team6_image_classifier/data/training/: example_data.csv
team6_image_classifier/launch/: classifier.launch
team6_image_classifier/scripts/: capture_images  classifier_node  image_node  train_classifier
team6_image_classifier/src/: README.md  classify_images.py
team6_image_classifier/src/team6_image_classifier/: __init__.py  transformers.py  utilities.py
team6_navigate_map/: CMakeLists.txt  package.xml
team6_navigate_map/launch/: bringup_nav.launch  bringup_nav_sim.launch  create_map.launch  create_map_sim.launch  navigate_map.launch  navigate_map_sim.launch  team6_create_map.launch  team6_create_map_sim.launch  team6_navigate_map_sim.launch  turtlebot3_nav_map_final.launch
team6_navigate_map/maps/: 7785_final_real.pgm  7785_final_real.yaml  mappyboy.pgm  mappyboy.pgm~  mappyboy.yaml  maze_map.pgm  maze_map.yaml  maze_map_sim.pgm  maze_map_sim.yaml
team6_navigate_map/scripts/: navigate_map  navigate_map_old  navigate_maze_final  scratch_paper.py
team6_navigate_map/waypoints/: global_waypoints.txt
team6_navigate_to_goal/: CMakeLists.txt  package.xml  setup.py
team6_navigate_to_goal/launch/: nav_to_goal.launch  turtlebot3_nav_to_goal.launch
team6_navigate_to_goal/scripts/: go_to_goal.py  test.py
team6_navigate_to_goal/src/navigate_to_goal/: __init__.py  avoid_obstacle.py  go_to_goal.py  nav_controller.py  odom.py  utilities.py
team6_object_follower/: CMakeLists.txt  package.xml  setup.py
team6_object_follower/launch/: track_object.launch  turtlebot3_track_object.launch
team6_object_follower/scripts/: find_object.py  param_assistant.py  rotate_robot.py
team6_object_follower/src/: rotate_robot.cpp
team6_turtlebot/: CMakeLists.txt  package.xml
