<?xml version="1.0"?>
<package format="2">
  <name>team6_navigate_map</name>
  <version>0.1.0</version>
  <description>The team6_navigate_map package</description>

  <maintainer email="arbogastaw@gmail.com">alex</maintainer>

  <author>Alex Arbogast</author>
  <author>Chris Sevigney</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
