<?xml version="1.0"?>
<package format="2">
	<name>team6_object_follower</name>
	<version>0.0.0</version>
	<description>The team6_object_follower package</description>
	<author email="aarbogast6@gatech.edu">Alex Arbogast</author>
	<maintainer email="aarbogast6@gatech.edu">Alex Arbogast</maintainer>

	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>geometry_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>cv_bridge</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
 
	<build_export_depend>geometry_msgs</build_export_depend>
	<build_export_depend>sensor_msgs</build_export_depend>
	<build_export_depend>cv_bridge</build_export_depend>
	<build_export_depend>roscpp</build_export_depend>
	<build_export_depend>rospy</build_export_depend>
 
	<exec_depend>geometry_msgs</exec_depend>
	<exec_depend>sensor_msgs></exec_depend>
	<exec_depend>cv_bridge</exec_depend>
	<exec_depend>roscpp</exec_depend>
	<exec_depend>rospy</exec_depend>
	<exec_depend>python-imutils</exec_depend>

	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->
	</export>
</package>
